--- a/src/components/CardComponent.css
+++ b/src/components/CardComponent.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   user-select: none;
+  overflow: hidden;
 }
 
 /* Card sizes */
@@ -97,11 +98,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .card-center svg {
   display: block;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /* Small card adjustments */
